refactor: existById 개선